refactor: changed fonts and redefined styles

--- a/restaurant.html
+++ b/restaurant.html
@@ -27,7 +27,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="main-content">
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
