style: added a restaurant details section and added the map in that box

--- a/restaurant.html
+++ b/restaurant.html
@@ -30,18 +30,21 @@
 
   <!-- Beginning main -->
   <main id="main-content">
-    <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
+
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <section id="restaurant-details">
+        <p id="restaurant-address"></p>
+        <!-- Beginning map -->
+        <section id="map-container">
+          <div id="map"></div>
+        </section>
+        <!-- End map -->
+        <table id="restaurant-hours"></table>
+      </section>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
