--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </section>
       <section>
         <div class="filter-options">
+          <div class="filter-options-content">
           <h2>Filter Results</h2>
           <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
             <option value="all">All Neighborhoods</option>
@@ -35,6 +36,7 @@
           <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
             <option value="all">All Cuisines</option>
           </select>
+        </div>
         </div>
         <div id="restaurants-list"></div>
       </section>
