--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
             <option value="all">All Neighborhoods</option>
           </select>
+          <label for="neighborhoods-select" aria-labelledby="neighborhoods-select">neighborhood select</label>
           <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
             <option value="all">All Cuisines</option>
           </select>
+          <label for="cuisines-select" aria-labelledby="cuisines-select">cuisine select</label>
         </div>
         </div>
         <div id="restaurants-list"></div>
