--- a/restaurant.html
+++ b/restaurant.html
@@ -34,7 +34,10 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h2 id="restaurant-name"></h2>
-      <img id="restaurant-img" alt="">
+      <picture>
+        <source id="restaurant-source" media="(min-width: 640px)"/>
+        <img id="restaurant-img" alt="">
+      </picture>
       <p id="restaurant-cuisine"></p>
       <label aria-labelledby="restaurant-cuisine">cuisine</label>
       <section id="restaurant-details">
