--- a/restaurant.html
+++ b/restaurant.html
@@ -17,13 +17,15 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
+    <div>
       <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
+    </div>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+    <nav aria-label="breadcrumb">
+      <ul id="breadcrumb" >
+        <li><a href="/">Home</a></li>
+      </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -39,19 +41,19 @@
         <source id="restaurant-source" media="(min-width: 640px)"/>
         <img id="restaurant-img" alt="">
       </picture>
-      <p id="restaurant-cuisine"></p>
-      <label aria-labelledby="restaurant-cuisine">cuisine</label>
+      <p id="restaurant-cuisine" aria-labelledby="restaurant-cuisine-label"></p>
+      <label id="restaurant-cuisine-label">cuisine</label>
       <section id="restaurant-details">
-        <p id="restaurant-address" aria-labelledby="restaurant-address"></p>
-        <label aria-labelledby="restaurant-address">address</label>
+        <p id="restaurant-address" aria-labelledby="restaurant-address-label"></p>
+        <label id="restaurant-address-label">address</label>
         <!-- Beginning map -->
-        <section id="map-container" aria-labelledby="map-container">
+        <section id="map-container" aria-labelledby="map-container-label">
           <div id="map"></div>
+            <label id="map-container-label">map</label>
         </section>
-        <label aria-labelledby="map-container">map</label>
         <!-- End map -->
-        <table id="restaurant-hours" aria-labelledby="restaurant-hours"></table>
-        <label aria-labelledby="restaurant-hours">hours</label>
+        <table id="restaurant-hours" aria-labelledby="restaurant-hours-label"></table>
+        <label id="restaurant-hours-label">hours</label>
       </section>
     </section>
     <!-- end restaurant -->
@@ -65,7 +67,10 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017
+    <a href="/">
+      <strong>Restaurant Reviews</strong>
+    </a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
@@ -79,5 +84,5 @@
   <!-- End scripts -->
 
 </body>
-
+  <script type="application/javascript" charset="utf-8" src="js/register.js"></script>
 </html>
