--- a/restaurant.html
+++ b/restaurant.html
@@ -47,13 +47,13 @@
         <p id="restaurant-address" aria-labelledby="restaurant-address-label"></p>
         <label id="restaurant-address-label">address</label>
         <!-- Beginning map -->
-        <section id="map-container" aria-labelledby="map-container-label">
+        <section id="map-container" aria-labelledby="map-container-label" role="application">
           <div id="map"></div>
             <label id="map-container-label">map</label>
         </section>
         <!-- End map -->
         <table id="restaurant-hours" aria-labelledby="restaurant-hours-label"></table>
-        <label id="restaurant-hours-label">hours</label>
+        <label id="restaurant-hours-label">hours of operation</label>
       </section>
     </section>
     <!-- end restaurant -->
