--- a/restaurant.html
+++ b/restaurant.html
@@ -20,7 +20,7 @@
   <header>
     <!-- Beginning nav -->
     <div>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/">Restaurant Reviews SRC</a></h1>
     </div>
     <!-- Beginning breadcrumb -->
     <nav aria-label="breadcrumb">
@@ -81,6 +81,7 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- Google Maps -->
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
   <!-- End scripts -->
