--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Restaurant Listings page">
-    <meta name="theme-color" content="#ff0000"/>
+    <meta name="theme-color" content="#0680cd"/>
 
     <link rel="shortcut icon" href="/img/favicon.ico">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -12,6 +12,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="manifest" href="manifest.json">
     <script type="application/javascript" charset="utf-8" src="js/register.js"></script>
 
 
