--- a/restaurant.html
+++ b/restaurant.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Restaurant Reviews page">
-  <meta name="theme-color" content="#ff000">
+  <meta name="theme-color" content="#0680cd">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <script type="application/javascript" charset="utf-8" src="js/register.js"></script>
+  <link rel="manifest" href="manifest.json">
+  <!-- <script type="application/javascript" charset="utf-8" src="js/register.js"></script> -->
 
   <title>Restaurant Info</title>
 </head>
@@ -84,7 +85,6 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- Service worker -->
   <script type="text/javascript" src="sw.js"></script>
   <!-- Google Maps -->
