--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
   <header>
     <!-- Beginning nav -->
     <div>
-      <h1><a href="/">Restaurant Reviews SRC</a></h1>
+      <h1><a href="/">Restaurant Reviews</a></h1>
     </div>
     <!-- Beginning breadcrumb -->
     <nav aria-label="breadcrumb">
