--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <div>
-        <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/">Restaurant Reviews lala</a></h1>
       </div>
     </header>
 
