feat: added jquery and review form

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <script type="text/javascript" src="js/idb.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+    <script type="application/javascript" charset="utf-8" src="js/jquery-1.12.2.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
     <script type="application/javascript" charset="utf-8" src="sw.js"></script>
 
