--- a/restaurant.html
+++ b/restaurant.html
@@ -65,8 +65,34 @@
     <section id="reviews-container">
       <div class="review-header">
         <h3>Reviews</h3>
-        <button id="add-review" aria-label="add review for restaurant">+ Add review</button>
-      </div>
+        <button id="start-review" class="add-review" aria-label="add review for restaurant">+ Add review</button>
+        </div>
+
+        <section id="form-container">
+          <form id="review-form">
+            <label for="review-name">Name:</label>
+            <input id="review-name" name="name" type="text"/>
+
+            <div class="rating">
+              <label for="review-selection">Rating:</label>
+              <select id="review-selection" aria-label="rating selection" name="rating">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
+
+            <label for="review-comments">Comments:</label>
+            <textarea id="review-comments" name="comments"></textarea>
+            <button id="submit-review" class="add-review" onclick="addReview()">Add review</button>
+
+          </form>
+        </section>
+
+
+
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
@@ -88,6 +114,7 @@
   <script type="text/javascript" src="js/idb.js"></script>
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
+  <script type="application/javascript" charset="utf-8" src="js/jquery-1.12.2.js"></script>
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Service worker -->
   <script type="text/javascript" src="sw.js"></script>
