--- a/restaurant.html
+++ b/restaurant.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Restaurant Reviews page">
   <meta name="theme-color" content="#0680cd">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
